--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,5 +7,10 @@ body {
 .header--main {
     font-weight: normal;
     font-size: 50px;
-    color: #fff;
+    color: #ffffff;
+}
+
+.link--cta {
+    font-size: 16px;
+    color: aquamarine;
 }
